# phigita-star

./: .bash_history  .bash_profile  .fonts.cache-1  README.md
etc/: dnsmasq.conf  gdb.production.run  gdb.run  git-website-howto.html  start-debug.production.sh  start-debug.sh  start-inittab-mode.sh  start-simple.sh  start-valgrind-memcheck.sh  start-valgrind.sh  start.sh  sysctl.conf
etc/cassandra/: log4j.properties  logging.props  storage-conf-2.xml  storage-conf-old.xml  storage-conf.xml  storage-conf.xml-0
etc/certs/: install-certs.sh  ssl.crt
etc/cron.daily/: cron.daily-fetch-backup.sh  cron.daily-postgresql.sh
etc/cron.weekly/: cron.weekly-restart-phigita.sh
etc/firebox/: access-list-102.txt  firebox-access-list.txt  nat-conf.txt
etc/iptables/: iptables-conf.txt
etc/keepalive/: keepalive-cron.sh
etc/nginx/: phigita.nginx.conf
etc/nsd/: config-phigita-0.tcl  config-phigita-1.tcl  config-phigita-8000.tcl  config-phigita-8001.tcl  config-phigita-8090-dev.tcl  config-phigita-8090-dev.tcl~  config-phigita-8090-valgrind.tcl  config-phigita-dns.tcl  config-phigita-global.tcl  config-phigita-mail.tcl  config-phigita-simple.tcl  config-phigita-static.tcl  config-phigita-static.tcl~  config-phigita-web-dev.tcl  config-phigita-web.tcl  config-phigita-web.tcl~  config-sms-8010.tcl
global/: error.tsp
lib/tchart/downloads/gnuplot-4.2.6/term/: Makefile  Makefile.am  Makefile.in
scripts/: ooo-converter.sh
tcl/: 00-lib-procs.tcl  00-lib-procs.tcl~  05-acs-init.tcl  logroll.tcl  sendmail.tcl  uri-patch.tcl  zz-postload.tcl
templates/: blank-master.inc  default-master.inc  www-shared.master.inc  www-shared.tabs.inc
www/: BingSiteAuth.xml  X9EWsd8-7n6snL9TkaAWn-nv5N0.txt  bookmarklet  bot.html  index.tdp  js  log.tcl  make-us-your-homepage.tsp  r  the-last-page.html  tv
(+18577 files in other folders)
